Provide components that can be readily used by the library consumers

--- a/assets/index.html
+++ b/assets/index.html
@@ -2,14 +2,13 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="/app.css">
-        <link rel="stylesheet" href="/ifpg.css">
+        <link href="mbdb-input-form.css" type="text/css" rel="stylesheet" />
         <meta charset="utf-8">
     </head>
 
     <body>
         <div id="app"></div>
-        <script src="/tester.js">
+        <script src="tester.js">
         </script>
     </body>
 </html>
